@@ -1,0 +1,35 @@
+- collapsed = (@contact.errors.empty? && session[:extra_contacts_new].nil?)
+= subtitle :extra, collapsed, "Extra Information"
+.section
+  %small#extra_intro{ hidden_if(!collapsed) }
+    You can add extra contact information later.
+  #extra{ hidden_if(collapsed) }
+    %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+      %tr
+        %td{ :valign => :top }
+          .label Title:
+          = f.text_field :title, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Department:
+          = f.text_field :department, :style => "width:240px"
+      %tr
+        %td{ :valign => :top }
+          .label Alternative email:
+          = f.text_field :alt_email, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label Mobile:
+          = f.text_field :mobile, :style => "width:240px"
+      %tr
+        %td{ :valign => :top }
+          .label Address:
+          = f.text_area :address, :style =>"width:240px", :rows => 3
+        %td= spacer
+        %td{ :valign => :top }
+          .label Fax:
+          = f.text_field :fax, :style => "width:240px"
+          %div{:style => "margin-top:6px"}
+            .check_box
+              = f.check_box :do_not_call, {}, true
+              Do not call
