@@ -5,13 +5,13 @@
     By default only you will have access to the contact. You can change contact permissions later.
   #permissions{ hidden_if(collapsed) }
     .radio_box
-      = radio_button_tag "contact[access]", "Private", @contact.access == "Private", :onclick => "$('people').hide()"
+      = f.radio_button :access, "Private", :onclick => "$('people').hide(); $('account_access').value = 'Shared'"
       Keep it private, do not share with others
     .radio_box
-      = radio_button_tag "contact[access]", "Public",  @contact.access == "Public", :onclick => "$('people').hide()"
+      = f.radio_button :access, "Public", :onclick => "$('people').hide(); $('account_access').value = 'Shared'"
       Share it with everyone
     .radio_box
-      = radio_button_tag "contact[access]", "Shared",  @contact.access == "Shared", :onclick => "$('people').show()"
+      = f.radio_button :access, "Shared", :onclick => "$('people').show(); $('account_access').value = 'Shared'"
       Share it with the following people
     #people{ hidden_if(@contact.access != "Shared") }
       %div{ :style => "padding: 6px 0px 0px 20px" }
