@@ -1,0 +1,23 @@
+- collapsed = (@contact.errors.empty? && session[:presence_contacts_new].nil?)
+= subtitle :presence, collapsed, "Web Presence"
+.section
+  %small#presence_intro{ hidden_if(!collapsed) }
+    You can add web presence information later.
+  #presence{ hidden_if(collapsed) }
+    %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
+      %tr
+        %td{ :valign => :top }
+          .label.top Website/Blog:
+          = f.text_field :blog, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label.top Twitter:
+          = f.text_field :twitter, :style => "width:240px"
+      %tr
+        %td{ :valign => :top }
+          .label LinkedIn:
+          = f.text_field :linkedin, :style => "width:240px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label FaceBook:
+          = f.text_field :facebook, :style => "width:240px"
