@@ -1,36 +1,22 @@
 - content_for :javascript do
   :javascript
-    function create_account() {
-      $("account_selector").update("(create new or <a href='#' onclick='select_account(); return false;'>select existing</a>):");
-      $("account_id").hide();
-      $("account_name").show();
-      $("account_name").focus();
-    }
-
-    function select_account() {
-      $("account_selector").update("(<a href='#' onclick='create_account(); return false;'>create new</a> or select existing):");
-      $("account_id").show();
-      $("account_name").hide();
-      $("account_id").focus();
-    }
-
     function submit_form() {
       // Empty selected account value if the dropdown is not visible.
       if (!$("account_id").visible()) {
         var index = $("account_id").selectedIndex;
         $('account_id')[index].value = "";
       }
-      // Propagate account[assigned_to] and account[access] to the opportunity.
-      $("opportunity_assigned_to").value = $F("account_assigned_to");
-      $("opportunity_access").value = $F("account_access");
+      // Propagate contact[access] to the account and account[assigned_to] to the contact.
+      $("account_assigned_to").value = $F("contact_assigned_to");
+      $("contact_access").value = $F("account_access");
     }
 
 - content_for :javascript_epilogue do
   <script type="text/javascript">
   - if !@account.id.blank?
-    select_account();
+    crm.select_account();
   - else
-    create_account();
+    crm.create_account();
   </script>
 
 .form
@@ -59,7 +45,7 @@
     = render :partial => "opportunity"
     = render :partial => "convert_permissions"
     .buttonbar
-      = f.submit "Convert", :onclick => "submit_form()"
+      = f.submit "Convert Lead", :onclick => "submit_form()"
       or
       = link_to "Cancel", leads_url
 
