@@ -27,8 +27,11 @@
           %dt
             %b= number_to_currency(opportunity.weighted_amount, :precision => 0) << " | "
             - unless %w(won lost).include?(opportunity.stage)
-              =  number_to_currency(opportunity.amount, :precision => 0) << " with #{opportunity.probability}% probability |"
-            == expected to close in #{distance_of_time_in_words(Date.today, opportunity.closes_on)}
+              =  number_to_currency(opportunity.amount || 0, :precision => 0) << " with #{opportunity.probability || 0}% probability |"
+            - if opportunity.closes_on
+              == expected to close in #{distance_of_time_in_words(Date.today, opportunity.closes_on)}
+            - else
+              no expected closing date
   - else
     %div== You don't have any opportunities yet. Feel free to #{link_to("create new opportunity", new_opportunity_path)}.
 
